--- a/assets/scss/requests.scss
+++ b/assets/scss/requests.scss
@@ -20,6 +20,7 @@
         flex-direction: column;
         background-color: white;
         padding: 5px;
+        margin: auto !important;
         margin: 0px 0px 5px 0px;
         box-sizing: border-box !important;
         div {
