--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -112,6 +112,7 @@
     </div>
     <div
       style="
+        width: 100% !important;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
