--- a/views/requests.ejs
+++ b/views/requests.ejs
@@ -57,7 +57,10 @@
     </div>
     <!-- coming requests -->
 
-    <div class="coming all" style="display: flex; flex-direction: column">
+    <div
+      class="coming all"
+      style="display: flex; flex-direction: column; width: inherit"
+    >
       <%if(locals.comingRequests.length==0){%>
       <div style="color: red; text-align: center; padding: 15px">
         No Coming request found
