--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
     <title>
         <%=locals.title%>
     </title>
