--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -5,6 +5,8 @@
     <title>
         <%=locals.title%>
     </title>
+    <link rel="canonical" href="http://chitkaralive.com/" />
+
     <link rel="icon" type="image/x-icon" href="http://chitkaralive.com/uploads/icons/cl_logo.jpg" style="background-color: inherit; height: 150px; width: 150px" />
     <meta name="viewport" content="width=device-width,initial-scale:1, height:device-height" />
     <meta charset="UTF-8" />
