--- a/views/layouts/some_layout.ejs
+++ b/views/layouts/some_layout.ejs
@@ -3,6 +3,7 @@
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="http://chitkaralive.com/uploads/icons/cl_logo.jpg" style="background-color: inherit; height: 150px; width: 150px" />
+    <link rel="canonical" href="http://chitkaralive.com/" />
 
     <meta name="viewport" content="width=device-width,initial-scale:1,height:device-height" />
     <meta charset="UTF-8" />
