--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -67,6 +67,12 @@
 </head>
 
 <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
+    <!-- ad -->
+    <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-3534721178469552" data-ad-slot="1896139632" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <div id="notifications" style="z-index: 9999999 !important"></div>
     <%-include('../partials/_header');-%>
         <div id="request-new-creator-account-container" style="height: auto; padding-bottom: 2px" class="no_display">
