--- a/views/user_posts.ejs
+++ b/views/user_posts.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="<%=assetPath('css/user_posts.css')%>" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
 <div id="user_posts">
     <div id="detail-head" style="z-index: 3 !important">
         <div style="
