--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -68,8 +68,10 @@
 
 <body>
     <div id="notifications" style="z-index: 9999999 !important"></div>
-    <%-include('../partials/_header');-%>
-
+    <%-include('../partials/_header')-%>
+        <!-- google-ads-script -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
+        <!-- till here -->
         <div id="request-new-creator-account-container" style="height: auto; padding-bottom: 2px" class="no_display">
             <div style="margin: auto">
                 <h2 style="text-align: center">Request For New Creator Account</h2>
