--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -1,6 +1,8 @@
 <link rel="stylesheet" href="<%=assetPath('css/post.css')%>" />
 <div id="post-container">
-
+    <!-- google-ads-script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
+    <!-- till here -->
     <%var count=0;%>
         <%for(let post of posts){%>
             <div class="post-class post-some-<%=post.id%>" id="post-<%=count%>">
