--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -60,6 +60,7 @@
         overflow: hidden;
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         align-items: space-between;
         justify-content: space-between;
       " id="head-option">
