--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -55,7 +55,7 @@
         padding: 15px 60px 15px 60px;
         box-sizing: border-box;
         width: 100%;
-        height: 80px;
+        height: auto;
         word-wrap: break-word;
         overflow: hidden;
         display: flex;
