--- a/assets/scss/mess.scss
+++ b/assets/scss/mess.scss
@@ -2,7 +2,7 @@
     background-color: rgb(82, 79, 79);
     color: white;
     transition: border 0.3s ease-in-out;
-    padding: 12px;
+    padding: 4px 7px 4px 7px;
     box-sizing: border-box;
     border-radius: 25px;
     display: flex;
