--- a/views/team.ejs
+++ b/views/team.ejs
@@ -39,11 +39,11 @@
       style="
         word-wrap: break-word;
         overflow: hidden;
-        font-size: 35;
+        font-size: 32;
         font-weight: 800;
         margin-right: 50px;
         height: auto;
-        max-height: 200px;
+        /* max-height: 200px; */
         box-sizing: border-box;
       "
     >
