--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -13,7 +13,7 @@
         <div style="
         box-sizing: border-box;
         width: 100%;
-        height: 90px;
+        height: auto;
         word-wrap: break-word;
         overflow: hidden;
         display: flex;
