--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -34,7 +34,7 @@
           justify-content: flex-start;
           align-items: flex-end;
         ">
-                <%=_user.name%> Hostel chitkara university himachal pradesh
+                <%=_user.name%>
             </div>
             <div style="
           width: 43%;
