--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -33,6 +33,8 @@
           display: flex;
           justify-content: flex-start;
           align-items: flex-end;
+          font-size: 55;
+          font-weight: 900;
         ">
                 <%=_user.name%>
             </div>
