--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -21,10 +21,10 @@
         align-items: space-around;
       " id="head-info">
             <div style="
-          width: 57%;
+          width: 50%;
           /* background-color: red; */
           box-sizing: border-box;
-          padding: 20px 20px 10px 60px;
+          padding: 20px;
           word-wrap: break-word;
           font-size: 23;
           font-weight: 900;
@@ -32,17 +32,17 @@
           color: black;
           display: flex;
           justify-content: flex-start;
-          align-items: flex-end;
+          align-items: flex-start;
           font-size: 55;
           font-weight: 900;
         ">
                 <%=_user.name%>
             </div>
             <div style="
-          width: 43%;
+          width: 50%;
           /* background-color: yellow; */
           box-sizing: border-box;
-          padding: 20px 20px 0px 20px;
+          padding: 20px;
           display: flex;
           justify-content: center;
           align-items: flex-end;
