--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -35,6 +35,7 @@
           align-items: flex-start;
           font-size: 55;
           font-weight: 900;
+          box-sizing: border-box !important;
         ">
                 <%=_user.name%>
             </div>
@@ -49,6 +50,7 @@
           word-wrap: break-word;
           font-size: 55;
           font-weight: 900;
+          box-sizing: border-box !important;
         ">
                 MENU
             </div>
