--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -33,8 +33,9 @@
           display: flex;
           justify-content: flex-start;
           align-items: flex-start;
-          font-size: 55;
+          font-size: 50;
           font-weight: 900;
+          word-break: break-all;
           box-sizing: border-box !important;
         ">
                 <%=_user.name%>
@@ -48,8 +49,9 @@
           justify-content: center;
           align-items: flex-end;
           word-wrap: break-word;
-          font-size: 55;
+          font-size: 50;
           font-weight: 900;
+          word-break: break-all;
           box-sizing: border-box !important;
         ">
                 MENU
