--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -46,8 +46,8 @@
           box-sizing: border-box;
           padding: 20px;
           display: flex;
-          justify-content: center;
-          align-items: flex-end;
+          justify-content: flex-end;
+          align-items: center;
           word-wrap: break-word;
           font-size: 45;
           font-weight: 900;
