--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -47,7 +47,7 @@
           padding: 20px;
           display: flex;
           justify-content: flex-end;
-          align-items: center;
+          align-items: flex-start;
           word-wrap: break-word;
           font-size: 45;
           font-weight: 900;
