--- a/views/mess.ejs
+++ b/views/mess.ejs
@@ -35,6 +35,8 @@
           align-items: flex-start;
           font-size: 45;
           font-weight: 900;
+          word-wrap: break-word;
+          word-break: break-all;
 
           box-sizing: border-box !important;
         ">
