--- a/views/my_save_items.ejs
+++ b/views/my_save_items.ejs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="<%=assetPath('css/save_items.css')%>" />
 <div id="my-save-items">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
     <div id="save-item-headers">
         <div id="img-container">
             <img height="65px" width="65px" style="border-radius: 50%" src="<%=locals.user.pic%>" alt="profile pic" />
