--- a/views/my_save_items.ejs
+++ b/views/my_save_items.ejs
@@ -1,6 +1,12 @@
 <link rel="stylesheet" href="<%=assetPath('css/save_items.css')%>" />
 <div id="my-save-items">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
+    <!-- chitkara live ads -->
+    <ins class="adsbygoogle" style="display: block" data-ad-client="ca-pub-3534721178469552" data-ad-slot="7340602651" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <div id="save-item-headers">
         <div id="img-container">
             <img height="65px" width="65px" style="border-radius: 50%" src="<%=locals.user.pic%>" alt="profile pic" />
