--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -69,6 +69,7 @@
 
 <body>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
     <div id="notifications" style="z-index: 9999999 !important"></div>
     <%-include('../partials/_header')-%>
 
