--- a/views/my_save_items.ejs
+++ b/views/my_save_items.ejs
@@ -13,6 +13,7 @@
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3534721178469552" crossorigin="anonymous"></script>
     <div id="save-item-container">
         <%if(saveItems.length==0){%>
             <div class="class-item" style="text-align: center; font-size: 18">
